--- a/client/src/app/components/file-upload/file-upload.component.html
+++ b/client/src/app/components/file-upload/file-upload.component.html
@@ -4,7 +4,7 @@
     <button type="button" mat-mini-fab color="primary" class="upload-btn" [ngStyle]="{ transform: 'scale(0.8)' }" (click)="fileUpload.click()">
         <mat-icon>attach_file</mat-icon>
     </button>
-    <button type="button" mat-mini-fab color="primary" class="upload-btn" [ngStyle]="{ transform: 'scale(0.7)' }">
+    <button type="button" mat-mini-fab color="primary" class="upload-btn" [ngStyle]="{ transform: 'scale(0.7)' }" (click)="onRemoveFile()">
         <mat-icon>delete_forever</mat-icon>
     </button>
 </div>
