--- a/client/src/app/components/game-card/game-card.component.html
+++ b/client/src/app/components/game-card/game-card.component.html
@@ -6,10 +6,10 @@
     <mat-card-content> <img [src]="trustedUrl" alt="Image" /> </mat-card-content>
 
     <mat-card-actions>
-        <button mat-stroked-button color="primary">
+        <button mat-stroked-button color="primary" (click)="jouer()">
             {{ isConfig ? 'Réinitialiser' : 'Jouer' }}
         </button>
-        <button mat-stroked-button color="accent">
+        <button mat-stroked-button color="accent" (click)="isConfig ? onDelete() : jouer()">
             {{ isConfig ? 'Supprimer' : 'Joindre' }}
         </button>
     </mat-card-actions>
