--- a/client/src/app/pages/configuration-page/configuration-page.component.html
+++ b/client/src/app/pages/configuration-page/configuration-page.component.html
@@ -2,4 +2,4 @@
 <button mat-mini-fab color="primary" matTooltip="Créer un nouveau jeu" routerLink="/creation">
     <mat-icon>add</mat-icon>
 </button>
-<app-game-card-grid [isConfig]="true"></app-game-card-grid>
+<app-game-card-grid id="grid" [isConfig]="true"></app-game-card-grid>
