--- a/client/src/app/components/game-card-grid/game-card-grid.component.html
+++ b/client/src/app/components/game-card-grid/game-card-grid.component.html
@@ -1,7 +1,9 @@
 <div class="grid" *ngIf="sheets.length > 0">
     <ng-container *ngFor="let sheet of getCurrentSheets()">
-        <app-game-card class="cell" [sheet]="sheet" [isConfig]="isConfig"></app-game-card>
+        <app-game-card class="cell" [sheet]="sheet" [isConfig]="isConfig" (delete)="onSheetDelete(sheet)"></app-game-card>
     </ng-container>
 </div>
-<button mat-mini-fab *ngIf="currentPage > 0" (click)="prevPage()" color="primary"><mat-icon>keyboard_arrow_left</mat-icon></button>
-<button mat-mini-fab *ngIf="currentPage < totalPages - 1" (click)="nextPage()" color="primary"><mat-icon>keyboard_arrow_right</mat-icon></button>
+<div class="buttons">
+    <button mat-mini-fab *ngIf="currentPage > 0" (click)="prevPage()" color="primary"><mat-icon>keyboard_arrow_left</mat-icon></button>
+    <button mat-mini-fab *ngIf="currentPage < totalPages - 1" (click)="nextPage()" color="primary"><mat-icon>keyboard_arrow_right</mat-icon></button>
+</div>
