config buttons + constants fix

--- a/client/src/app/pages/configuration-page/configuration-page.component.html
+++ b/client/src/app/pages/configuration-page/configuration-page.component.html
@@ -1,5 +1,3 @@
 <app-header pageTitle="Configuration"></app-header>
-<button mat-mini-fab color="primary" matTooltip="Créer un nouveau jeu" routerLink="/creation">
-    <mat-icon>add</mat-icon>
-</button>
+<app-config-buttons></app-config-buttons>
 <app-game-card-grid id="grid" [isConfig]="true"></app-game-card-grid>
