--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -10,7 +10,7 @@
         </div>
     </section> -->
     <button mat-stroked-button color="primary" class="button" routerLink="/selection">Mode Classique</button>
-    <button mat-stroked-button color="primary" class="button">Mode Solo</button>
+    <button mat-stroked-button color="primary" class="button">Temps Limité</button>
     <button mat-stroked-button color="accent" class="button" routerLink="/config">Configuration</button>
 
     <footer class="footer-item">
