--- a/client/src/app/components/constants-dialog/constants-dialog.component.html
+++ b/client/src/app/components/constants-dialog/constants-dialog.component.html
@@ -7,7 +7,7 @@
     </mat-dialog-content>
     <mat-dialog-content
         ><h2>Temps de penalité</h2>
-        5 secondes</mat-dialog-content
+        <span>5 secondes</span></mat-dialog-content
     >
     <mat-dialog-content>
         <h2>Temps gagné</h2>
