--- a/client/src/app/pages/game-page/game-page.component.html
+++ b/client/src/app/pages/game-page/game-page.component.html
@@ -9,4 +9,4 @@
 </div>
 <app-differences-found></app-differences-found>
 <app-play-area class="play-area-container"></app-play-area>
-<app-chat-zone class="chat-zone-container"></app-chat-zone>
+<app-chat-zone class="chat-zone-container" [playerName]="playerName"></app-chat-zone>
