--- a/client/src/app/components/chat-zone/chat-zone.component.html
+++ b/client/src/app/components/chat-zone/chat-zone.component.html
@@ -1,5 +1,5 @@
 <mat-card class="chat-zone" (keyup.enter)="send()">
-    <mat-card-title class="op-name">Mono</mat-card-title>
+    <mat-card-title class="op-name">{{ this.playerName }}</mat-card-title>
     <div class="chat-area" #scrollMe [scrollTop]="scrollMe.scrollHeight">
         <div *ngFor="let message of chatService.roomMessages">
             <div class="message-wrapper">
