--- a/client/src/app/components/image-area/image-area.component.html
+++ b/client/src/app/components/image-area/image-area.component.html
@@ -15,4 +15,4 @@
     </canvas>
     <canvas id="background" [attr.width]="width" [attr.height]="height" #background> </canvas>
 </div>
-<button type="button" (click)="mergeCanvas()">a</button>
+<button type="button" (click)="mergeCanvas()">merge</button>
