--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -16,8 +16,8 @@
     <footer class="footer-item">
         <h4 class="team-name">Équipe Poly</h4>
         <p>
-            <span>Coéquipier #1</span>, <span>Coéquipier #2</span>, <span>Coéquipier #3</span>, <span>Coéquipier #4</span>,
-            <span>Coéquipier #5</span>, <span>Coéquipier #6</span>
+            <span>Ahmed El Shami</span>, <span>Rayan Fellah</span>, <span>Skander Hannachi</span>, <span>Mohammed Awad</span>,
+            <span>Ziad Kaabi</span>, <span>Radwan Rahman</span>
         </p>
     </footer>
 </div>
