accepter ou refuser un joeur

--- a/client/src/app/components/game-card-grid/game-card-grid.component.html
+++ b/client/src/app/components/game-card-grid/game-card-grid.component.html
@@ -5,7 +5,8 @@
             [sheet]="sheet"
             [isConfig]="isConfig"
             (delete)="onSheetDelete(sheet)"
-            (myEvent)="onChildEvent($event)"
+            (createEvent)="onChildEvent($event)"
+            (joinEvent)="onJoinEvent($event)"
         ></app-game-card>
     </ng-container>
 </div>
