--- a/client/src/app/components/game-card/game-card.component.html
+++ b/client/src/app/components/game-card/game-card.component.html
@@ -9,7 +9,7 @@
         <button mat-stroked-button color="primary" (click)="play()">
             {{ isConfig ? 'Réinitialiser' : 'Jouer' }}
         </button>
-        <button mat-stroked-button color="accent" (click)="isConfig ? onDelete() : join()">
+        <button mat-stroked-button color="accent" (click)="isConfig ? onDelete() : sheet.isJoinable ? join() : create()">
             {{ isConfig ? 'Supprimer' : sheet.isJoinable ? 'Joindre' : 'Créer' }}
         </button>
     </mat-card-actions>
