--- a/client/src/app/components/chat-zone/chat-zone.component.html
+++ b/client/src/app/components/chat-zone/chat-zone.component.html
@@ -1,4 +1,4 @@
-<mat-card class="chat-zone" (keyup.enter)="send()">
+<mat-card class="chat-zone" (keyup.enter)="sendMessage()">
     <mat-card-title class="op-name">{{ this.playerName }}</mat-card-title>
     <div class="chat-area" swScrollPosition="lorum-ipsum">
         <div *ngFor="let message of chatMessages">
@@ -26,9 +26,9 @@
     </div>
     <mat-form-field appearance="outline" class="input-area">
         <input matInput placeholder="type..." maxlength="200" type="text" [(ngModel)]="messageContent" />
-        <button class="send-button" mat-icon-button matSuffix (click)="send()">
+        <button class="send-button" mat-icon-button matSuffix (click)="sendMessage()">
             <mat-icon>send</mat-icon>
         </button>
     </mat-form-field>
-    <p>{{ this.chatService.serverTime }}</p>
+    <p></p>
 </mat-card>
