--- a/client/src/app/components/loading-dialog/loading-dialog.component.html
+++ b/client/src/app/components/loading-dialog/loading-dialog.component.html
@@ -2,11 +2,13 @@
     <mat-card-title>Salle d'attente</mat-card-title>
     <mat-card-subtitle>En attente d'un joueur</mat-card-subtitle>
     <mat-card-content class="content">
-        <div *ngIf="data.playerName">
-            <p>Joueur : {{ data.playerName }}</p>
-            <button mat-mini-fab><mat-icon>check</mat-icon></button>
+        <div *ngIf="data.playerNames.length > 0">
+            <div *ngFor="let name of data.playerNames">
+                <p>Joueur : {{ name }}</p>
+                <button mat-mini-fab><mat-icon>check</mat-icon></button>
 
-            <button mat-mini-fab><mat-icon>close</mat-icon></button>
+                <button mat-mini-fab><mat-icon>close</mat-icon></button>
+            </div>
         </div>
         <mat-spinner></mat-spinner>
     </mat-card-content>
