Cheat mode done

--- a/client/src/app/components/image-area/image-area.component.html
+++ b/client/src/app/components/image-area/image-area.component.html
@@ -10,6 +10,8 @@
         (mouseup)="stop($event)"
         (mouseout)="stop($event)"
         (keydown)="keyEvents($event)"
+        (keyup.shift)="drawingTool.drawingService.shiftKeyPressed = false"
+        (keydown.shift)="drawingTool.drawingService.shiftKeyPressed = true"
         #foreground
     >
     </canvas>
