--- a/client/src/app/components/loading-dialog/loading-dialog.component.html
+++ b/client/src/app/components/loading-dialog/loading-dialog.component.html
@@ -5,9 +5,9 @@
         <div *ngIf="data.playerNames.length > 0">
             <div *ngFor="let name of data.playerNames">
                 <p>Joueur : {{ name }}</p>
-                <button mat-mini-fab><mat-icon>check</mat-icon></button>
+                <button mat-mini-fab (click)="confirm(name)"><mat-icon>check</mat-icon></button>
 
-                <button mat-mini-fab><mat-icon>close</mat-icon></button>
+                <button mat-mini-fab (click)="reject(name)"><mat-icon>close</mat-icon></button>
             </div>
         </div>
         <mat-spinner></mat-spinner>
