--- a/client/src/app/components/game-card/game-card.component.html
+++ b/client/src/app/components/game-card/game-card.component.html
@@ -4,6 +4,7 @@
         <mat-card-subtitle>{{ sheet.difficulty }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content> <img [src]="trustedUrl" alt="Image" /> </mat-card-content>
+    <mat-card-content><app-game-score></app-game-score></mat-card-content>
 
     <mat-card-actions>
         <button mat-stroked-button color="primary" (click)="play()">
