--- a/client/src/app/pages/creation-page/creation-page.component.html
+++ b/client/src/app/pages/creation-page/creation-page.component.html
@@ -13,7 +13,7 @@
         </div>
 
         <app-image-area #leftImageArea id="leftCanvas" [side]="'left'"></app-image-area>
-        <button mat-raised-button color="primary" id="switchButton" (click)="switch(leftImageArea, rightImageArea)">
+        <button type="button" mat-raised-button color="primary" id="switchButton" (click)="switch()">
             <mat-icon>compare_arrows</mat-icon>
             Inverser
         </button>
