--- a/client/src/app/pages/game-page/game-page.component.html
+++ b/client/src/app/pages/game-page/game-page.component.html
@@ -4,15 +4,27 @@
         <mat-icon>exit_to_app</mat-icon>
     </button>
     <div class="info-container">
-        <h1>
+        <h1 class="welcome-message">
             Bienvenue <span class="player-name">{{ playerName }}</span>
         </h1>
+        <div class="time-container">
+            <h2>{{ formattedTime }}</h2>
+        </div>
+        <div class="points-container">
+            <div class="player1-points" *ngIf="person">
+                <h2>{{ person.name }} {{ person.differencesFound }}</h2>
+            </div>
+            <div class="player2-points" *ngIf="opponent">
+                <h2>{{ opponent.name }} {{ opponent.differencesFound }}</h2>
+            </div>
+        </div>
     </div>
     <h2>Difficulté: {{ difficulty }}</h2>
     <app-play-area [playerName]="this.playerName" (difficulty)="onDifficultyChange($event)" class="play-area-container"></app-play-area>
     <app-chat-zone
         class="chat-zone-container"
         [playerName]="playerName"
+        [opponent]="opponent ? opponent.name : ''"
         [chatMessages]="this.chatMessages"
         (messageEvent)="sendMessage($event)"
     ></app-chat-zone>
