--- a/client/src/app/components/chat-zone/chat-zone.component.scss
+++ b/client/src/app/components/chat-zone/chat-zone.component.scss
@@ -41,6 +41,9 @@
 }
 
 .message-game {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     justify-content: center;
 }
 
