--- a/client/src/app/pages/game-page/game-page.component.scss
+++ b/client/src/app/pages/game-page/game-page.component.scss
@@ -7,13 +7,9 @@ $border-color: #ccc;
     justify-content: center;
 }
 
-.container {
+.game-score {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: $background-color;
-    padding: 20px;
+    align-self: flex-start;
 }
 
 .header {
