--- a/client/src/app/components/game-over-dialog/game-over-dialog.component.html
+++ b/client/src/app/components/game-over-dialog/game-over-dialog.component.html
@@ -1,9 +1,9 @@
 <mat-card>
     <h2 mat-dialog-title>
-        Congratulation <span class="name">{{ data }}</span> !
+        <span class="name">{{ data }}</span>
     </h2>
     <div mat-dialog-content>
-        <p>You found all the differences!</p>
+        <p>La Partie Est Terminée.</p>
     </div>
     <div mat-dialog-actions>
         <button mat-mini-fab color="primary" matTooltip="Quitter" [routerLink]="['/home']" mat-dialog-close>
