--- a/client/src/app/components/game-score/game-score.component.scss
+++ b/client/src/app/components/game-score/game-score.component.scss
@@ -1,15 +1,14 @@
 .scores-container {
     text-align: center;
-    border: 8px ridge #3f51b5;
+    border: 2px solid #626ca7;
     background-color: white;
     margin-top: 40px;
+    border-radius: 10px;
 }
 
 .scores-details-container {
     display: flex;
     justify-content: space-between;
-    border: 4px solid #3f51b5;
-    border-top: 8px solid #3f51b5;
     padding: 10px;
     margin-top: 20px;
 }
@@ -21,7 +20,6 @@
     flex-direction: column;
     align-items: center;
 }
-
 
 .scores-container h2 {
     font-weight: bold;
