--- a/client/src/app/components/image-area/image-area.component.html
+++ b/client/src/app/components/image-area/image-area.component.html
@@ -12,6 +12,8 @@
         (keyup.shift)="drawingTool.drawingService.shiftKeyPressed = false"
         (keydown.shift)="drawingTool.drawingService.shiftKeyPressed = true"
         (keydown)="keyEvents($event)"
+        (keyup.shift)="drawingTool.drawingService.shiftKeyPressed = false"
+        (keydown.shift)="drawingTool.drawingService.shiftKeyPressed = true"
         #foreground
     >
     </canvas>
