--- a/client/src/app/pages/game-page/game-page.component.html
+++ b/client/src/app/pages/game-page/game-page.component.html
@@ -1,4 +1,4 @@
-<div tabindex="0" autofocus (keydown.t)="playArea.blink()">
+<div tabindex="0" autofocus (keyup.t)="playArea.blink()">
     <app-header></app-header>
     <button mat-icon-button class="exit" routerLink="/main" matTooltip="Quitter" matTooltipPosition="before">
         <mat-icon>exit_to_app</mat-icon>
@@ -24,13 +24,13 @@
     <div class="play-area-container">
         <app-play-area [playerName]="this.playerName" (difficulty)="onDifficultyChange($event)" class="play-area"></app-play-area>
     </div>
-    <div class="chat-zone-container">
-        <app-chat-zone
-            [playerName]="playerName"
-            [opponent]="opponent ? opponent.name : ''"
-            [chatMessages]="this.chatMessages"
-            (messageEvent)="sendMessage($event)"
-            class="chat-zone"
-        ></app-chat-zone>
-    </div>
+</div>
+<div class="chat-zone-container">
+    <app-chat-zone
+        [playerName]="playerName"
+        [opponent]="opponent ? opponent.name : ''"
+        [chatMessages]="this.chatMessages"
+        (messageEvent)="sendMessage($event)"
+        class="chat-zone"
+    ></app-chat-zone>
 </div>
