--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -1,5 +1,5 @@
+<app-header pageTitle="PolyPixels"></app-header>
 <div class="container justified">
-    <app-header pageTitle="PolyPixels"></app-header>
     <div id="presentation">
         <svg width="150" height="150" viewBox="0 0 1080 1080" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect width="" height="" fill="" />
@@ -67,7 +67,7 @@
     <button mat-stroked-button color="accent" class="button" routerLink="/config">Configuration</button>
 
     <footer class="footer-item">
-        <h4 class="team-name">Équipe Poly</h4>
+        <h4 class="team-name">Équipe 209 Poly</h4>
         <p>
             <span>Ahmed El Shami</span>, <span>Rayan Fellah</span>, <span>Skander Hannachi</span>, <span>Mohammed Awad</span>,
             <span>Ziad Kaabi</span>, <span>Radwan Rahman</span>
