--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -2,7 +2,7 @@
 <div class="container justified">
     <div id="presentation">
         <svg width="150" height="150" viewBox="0 0 1080 1080" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <rect width="" height="" fill="" />
+            <rect  />
             <path d="M479.25 60.75H60.75V479.25H479.25V60.75Z" fill="#FFC49C" />
             <path d="M472.5 67.5V472.5H67.5V67.5H472.5ZM486 54H54V486H486V54Z" fill="#A16A4A" />
             <path d="M1019.25 600.75H600.75V1019.25H1019.25V600.75Z" fill="#BAE0BD" />
