limited time join game interface done

--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -63,7 +63,7 @@
     </div>
 
     <button mat-stroked-button color="primary" class="button" routerLink="/selection">Mode Classique</button>
-    <button mat-stroked-button color="primary" class="button">Temps Limité</button>
+    <button mat-stroked-button color="primary" class="button" (click)="selectGameMode()">Temps Limité</button>
     <button mat-stroked-button color="accent" class="button" routerLink="/config">Configuration</button>
 
     <footer class="footer-item">
