--- a/client/src/app/components/play-area/play-area.component.scss
+++ b/client/src/app/components/play-area/play-area.component.scss
@@ -39,3 +39,7 @@ section {
     flex-direction: column;
     align-items: center;
 }
+#play-area-container button {
+    display: block;
+    margin: 0 auto;
+}
