--- a/client/src/app/pages/game-page/game-page.component.html
+++ b/client/src/app/pages/game-page/game-page.component.html
@@ -1,4 +1,4 @@
-<div tabindex="0" autofocus (keyup.t)="playArea.blink()">
+<div tabindex="0" autofocus (keyup.t)="playArea.blink()" (keyup.i)="playArea.hint()">
     <app-header></app-header>
     <button mat-icon-button class="exit" routerLink="/main" matTooltip="Quitter" matTooltipPosition="before">
         <mat-icon>exit_to_app</mat-icon>
