--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -78,6 +78,9 @@ body {
 mat-toolbar {
     width: 100%;
     min-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 app-image-area {
     display: block;
