--- a/client/src/app/components/chat-zone/chat-zone.component.html
+++ b/client/src/app/components/chat-zone/chat-zone.component.html
@@ -1,5 +1,5 @@
-<mat-card class="chat-zone" (keyup.enter)="sendMessage()">
-    <mat-card-title class="op-name" *ngIf="opponent">{{ this.opponent }}</mat-card-title>
+<div class="chat-overlay" (keyup.enter)="sendMessage()">
+    <div class="op-name" *ngIf="opponent">{{ this.opponent }}</div>
     <div class="chat-area" swScrollPosition="lorum-ipsum">
         <div *ngFor="let message of chatMessages">
             <div class="message-wrapper">
@@ -24,11 +24,10 @@
             </div>
         </div>
     </div>
-    <mat-form-field appearance="outline" class="input-area" *ngIf="opponent">
-        <input matInput placeholder="type..." maxlength="200" type="text" [(ngModel)]="messageContent" />
-        <button class="send-button" mat-icon-button matSuffix (click)="sendMessage()">
+    <div class="input-area" *ngIf="opponent">
+        <input class="input-field" placeholder="type..." maxlength="200" type="text" [(ngModel)]="messageContent" />
+        <button class="send-button" (click)="sendMessage()">
             <mat-icon>send</mat-icon>
         </button>
-    </mat-form-field>
-    <p></p>
-</mat-card>
+    </div>
+</div>
