--- a/client/src/app/components/chat-zone/chat-zone.component.scss
+++ b/client/src/app/components/chat-zone/chat-zone.component.scss
@@ -1,21 +1,25 @@
-.input-area {
-    width: 300px;
-    padding-top: 10px;
+.chat-overlay {
+    top: 50%;
+    left: 0px;
+    right: unset;
+    width: 400px; /* Increase the width */
+    height: 300px; /* Decrease the height */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .op-name {
-    text-align: start;
+    font-weight: bold;
+    font-size: 18px;
+    color: #ffffff;
 }
 
 .chat-area {
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    height: 320px;
-    width: 300px;
-    background: linear-gradient(to bottom, #f2f0f0, #d1d1d1);
-    overflow-y: scroll;
+    background-color: rgba(0, 0, 0, 0.3);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    height: 200px; /* Decrease the height */
+    overflow-y: auto;
     display: flex;
     flex-flow: column nowrap;
 }
@@ -28,6 +32,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: flex-start; /* Add this line */
 }
 
 .message-player {
@@ -50,38 +55,23 @@
 .message-content {
     word-wrap: break-word;
     min-width: 0;
-    max-width: 180px;
-    margin: 8px;
-    padding: 12px;
-    border-radius: 20px;
-    background-color: #eceff1;
+    width: fit-content;
+    margin: 0;
+    padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
 
 .player {
-    background-color: #3f51b5;
-    color: #fff;
+    background-color: transparent;
+    color: #3f51b5;
 }
 
 .opponent {
-    background-color: #757575;
-    color: #fff;
+    background-color: transparent;
+    color: #757575;
 }
 
 .game {
-    background-color: #ffd600;
-    color: #444444;
-}
-.send-button {
-    margin-left: 10px;
-    color: #ffffff;
-    background-color: #3f51b5;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
-}
-
-.send-button:hover {
-    background-color: #1a237e;
-    transform: scale(1.1);
+    background-color: transparent;
+    color: #3f51b5;
 }
