--- a/client/src/app/pages/game-page/game-page.component.html
+++ b/client/src/app/pages/game-page/game-page.component.html
@@ -1,13 +1,18 @@
-<div tabindex="0" autofocus (keyup.t)="playArea.blink()">
-    <app-header></app-header>
-    <button mat-icon-button class="exit" routerLink="/main" matTooltip="Quitter" matTooltipPosition="before">
-        <mat-icon>exit_to_app</mat-icon>
-    </button>
-    <div class="info-container">
-        <h1 class="welcome-message">
-            Bienvenue <span class="player-name">{{ playerName }}</span>
-        </h1>
-        <app-game-score class="game-score"></app-game-score>
+<app-header [pageTitle]="'Bienvenue ' + playerName"></app-header>
+<main class="container">
+    <div tabindex="0" autofocus (keyup.t)="playArea.blink()">
+        <h2>Difficulté: {{ difficulty }}</h2>
+        <div class="play-area-container">
+            <app-play-area [playerName]="this.playerName" (difficulty)="onDifficultyChange($event)" class="play-area"></app-play-area>
+        </div>
+    </div>
+    <div class="options-container">
+        <button mat-stroked-button color="primary" *ngIf="isReplayPlaying && !isReplayPaused" (click)="pauseReplay()">Pause Replay</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayPaused" (click)="resumeReplay()">Resume Replay</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="restartReplay()">Restart Replay</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(1)">1X</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(2)">2X</button>
+        <button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(3)">3X</button>
         <div class="points-container">
             <div class="player1-points" *ngIf="person">
                 <h2>{{ person.name }} {{ person.differencesFound }}/{{ this.differences }}</h2>
@@ -20,30 +25,14 @@
             </div>
         </div>
     </div>
-    <h2>Difficulté: {{ difficulty }}</h2>
-    <div class="play-area-container">
-        <app-play-area [playerName]="this.playerName" (difficulty)="onDifficultyChange($event)" class="play-area"></app-play-area>
+
+    <div class="chat-zone-container">
+        <app-chat-zone
+            [playerName]="playerName"
+            [opponent]="opponent ? opponent.name : ''"
+            [chatMessages]="this.chatMessages"
+            (messageEvent)="sendMessage($event)"
+            class="chat-zone"
+        ></app-chat-zone>
     </div>
-</div>
-<button mat-stroked-button color="primary" *ngIf="isReplayPlaying && !isReplayPaused" (click)="pauseReplay()">Pause Replay</button>
-<button mat-stroked-button color="primary" *ngIf="isReplayPaused" (click)="resumeReplay()">Resume Replay</button>
-<button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="restartReplay()">Restart Replay</button>
-<button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(1)">1X</button>
-<button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(2)">2X</button>
-<button mat-stroked-button color="primary" *ngIf="isReplayPlaying" (click)="setReplaySpeed(3)">3X</button>
-
-<!-- Rest of your template -->
-
-<!-- Rest of your template -->
-
-
-
-<div class="chat-zone-container">
-    <app-chat-zone
-        [playerName]="playerName"
-        [opponent]="opponent ? opponent.name : ''"
-        [chatMessages]="this.chatMessages"
-        (messageEvent)="sendMessage($event)"
-        class="chat-zone"
-    ></app-chat-zone>
-</div>
+</main>
