--- a/client/src/app/components/play-area/play-area.component.scss
+++ b/client/src/app/components/play-area/play-area.component.scss
@@ -1,5 +1,5 @@
 #canvas {
-    border: 4px solid black;
+    border: solid 1px #3f51b5;
 }
 
 .canvas {
@@ -7,6 +7,7 @@
     display: inline-block;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
+    border: solid 1px #3f51b5;
 }
 
 canvas {
